# K-Means

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Point.cpp  Point.hpp  README.md  k-means.cpp  k-means.hpp  main.cpp  makefile  readWrite.cpp  readWrite.hpp
.github/workflows/: c-cpp.yml
data/: UnDefined.csv  centroids.csv  data.csv  out.csv  trial1.csv
include/: Point.h  cluster.h  k-means.h  point.h  readWrite.h  utils.h
scripts/: synthetic_data.py
src/: Point.cpp  a.out  cluster.cpp  cpu_time.cpp  k-means.cpp  main.cpp  point.cpp  readWrite.cpp  utils.cpp
